# rfp-agent

./: TODO.md  changes_Arijit.txt  package-lock.json  package.json  rfp_agent.db
backend/: .gitignore  documents.db  package-lock.json  package.json  pyproject.toml  requirements.txt  rfp_agent.db
backend/app/: main.py
backend/app/agents/: async_processor.py  async_scope_agent.py  classification_agent.py  compliance.py  compliance_requirement_agent.py  contract_agent.py  deadline_agent.py  disqualifier_agent.py  evaluation_agent.py  forms_agent.py  insurance_agent.py  qualification_agent.py  scope_agent.py  staffing_agent.py  strategy_agent.py  timeline_agent.py
backend/app/core/: config.py
backend/app/db/: chunk_store.py  database.py  document_store.py
backend/app/models/: chat_message.py  context_memory.py  conversation.py  report.py  user.py
backend/app/schemas/: rfp_schema.py
backend/app/services/: aggregator.py  analysis_orchestrator.py  async_processor.py  chat_memory.py  chat_rag.py  chunker.py  compliance_engine.py  compliance_matrix.py  confidence.py  context_memory.py  executive_brief.py  export_service.py  extractor.py  llm_provider.py  llm_utils.py  master_extractor.py  memory.py  merger.py  ocr_service.py  opportunity_assessment.py  parallel_processor.py  pdf_parser.py  procurement_kb.py  proposal_strategy.py  report_store.py  rfp_extractor.py  solicitation_classifier.py  summary.py  vector_store.py
backend/app/workflows/: rfp_workflow.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db/07174a51-217b-491b-a097-3acc51fe9e81/: chroma.sqlite3
backend/chroma_db/0a687e1c-1985-48a2-96c5-38caa7ee1394/: chroma.sqlite3
backend/chroma_db/1ce8c6aa-1ff6-43fa-8bb1-b429803aae8a/: chroma.sqlite3
backend/chroma_db/global/: chroma.sqlite3
backend/exports/: rfp_report.docx
backend/uploads/: a26da727-a80d-4b3b-8458-dc6b17712dca_rfp_report (4).docx  rfp_report.docx
(+74 files in other folders)
