[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103.1",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "fitz>=0.0.1.dev2",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "marked>=0.9.1",
    "openai>=2.37.0",
    "passlib>=1.7.4",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.13.0",
    "uuid>=1.30",
    "uvicorn>=0.47.0",
]
